done adding links to the pages ,reciepe and img remaining

--- a/reciepes/biriyani.html
+++ b/reciepes/biriyani.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin-Reciepes</title>
+    <title>BIriyani</title>
 </head>
 
 <body>
-    <h1>Odin Reciepes</h1>
-    <a href="reciepes/biriyani.html"><strong>Biriyani</strong></a>
+    <h1>Biryani</h1>
+    <a href="/index.html"><Strong>Home</Strong></a>
 </body>
 
 </html>
