moved img into the img folder

--- a/reciepes/biriyani.html
+++ b/reciepes/biriyani.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Biryani</h1>
-    <img src="/Biryani.jpg" alt="biriyani img" height="300px">
+    <img src="/imgs/Biryani.jpg" alt="biriyani img" height="300px">
     <h3>Description</h3>
     <p>The exact origin of the dish is uncertain, however, it has been suggested that it originated in Persia. In North
         India, there are different varieties of biryani developed over time.</p>
