added css to the main page

--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin-Reciepes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Odin Reciepes</h1>
-    <a href="reciepes/biriyani.html"><strong>Biriyani</strong></a>
+
+    <h1>ODIN Reciepes</h1>
+    <ul style="text-align: center; margin-top: 50px; font-size: large;">MENU</ul>
+    <li><a href="reciepes/biriyani.html"><strong>Biriyani</strong></a></li>
+
+
 </body>
 
 </html>
