--- a/reciepes/biriyani.html
+++ b/reciepes/biriyani.html
@@ -5,105 +5,139 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BIriyani</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: beige;
+            /* text-align: center; */
+            /* width: 50vw; */
+        }
+
+        .center {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: auto;
+            border-radius: 20px;
+        }
+
+        .content {
+            width: 50vw;
+            margin-left: 25%;
+            padding-top: 10px;
+        }
+    </style>
+
 </head>
 
 <body>
-    <h1>Biryani</h1>
-    <img src="/imgs/Biryani.jpg" alt="biriyani img" height="300px">
-    <h3>Description</h3>
-    <p>The exact origin of the dish is uncertain, however, it has been suggested that it originated in Persia. In North
-        India, there are different varieties of biryani developed over time.</p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>half kg chicken (1.1 lbs.)</li>
-        <li>3 tablespoons plain yogurt (Indian curd)</li>
-        <li>1¼ tablespoons ginger garlic paste</li>
-        <li>½ to 1 tablespoon garam masala (or biriyani masala)</li>
-        <li>½ teaspoon salt</li>
-        <li>¼ teaspoon ground turmeric</li>
-        <li>½ to 1 teaspoon red chili powder (reduce for kids)</li>
-        <li>1 tablespoon lemon juice (optional)</li>
-        <li>2 cup basmati reciepes</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-        <li>This recipe needs half kg chicken (1.1 lbs.). Make few slits on all the chicken pieces and add to a large
-            bowl.Then add all the required spices.listed above in the ingredients</li>
-        <li>Mix everything well and marinate the chicken. Cover and set this aside for 1 hour. You can also rest it
-            overnight in the
-            fridge.</li>
-        <li>Meanwhile add 2 cups basmati rice to a large pot and rinse it at least thrice. Drain and soak in fresh water
-            for 30
-            mins. Drain to a colander after 30 mins. Optional – Soak a pinch of saffron strands in 2 tablespoons hot
-            milk.</li>
-        <li>Heat ghee or oil in a heavy bottom pot or pressure cooker. Make sure you use a large one for this. Using
-            whole spices is
-            optional but recommended. Use whatever you have. I use
-            <ul>
-                <li>1 bay leaf
-                </li>
-                <li>4 green cardamoms
-                </li>
-                <li>6 cloves
-                </li>
-                <li>1 inch cinnamon piece
-                </li>
-                <li>1 star anise
-                </li>
-                <li>¾ teaspoon shahi jeera (caraway seeds)
-                </li>
-                <li>1 strand mace (optional, omit if you don’t like)
-                </li>
-            </ul>
+    <h1 style="padding: 25px; text-align: center;">Biryani</h1>
+    <img class="center" src="/imgs/Biryani.jpg" alt="biriyani img" height="300px">
+    <div class="content">
+        <h3 style="text-align: left; padding-top: 15px;">Description</h3>
+        <p style="text-align: left; padding-top: 5px;">The exact origin of the dish is uncertain, however, it has been
+            suggested that it originated in Persia. In North
+            India, there are different varieties of biryani developed over time.</p>
+        <h3 style="text-align: left; padding-top: 35px;">Ingredients</h3>
+        <ul style="margin-top: 5px; text-decoration: none; ">
+            <li style="margin-top: 10px;">half kg chicken (1.1 lbs.)</li>
+            <li>3 tablespoons plain yogurt (Indian curd)</li>
+            <li>1¼ tablespoons ginger garlic paste</li>
+            <li>½ to 1 tablespoon garam masala (or biriyani masala)</li>
+            <li>½ teaspoon salt</li>
+            <li>¼ teaspoon ground turmeric</li>
+            <li>½ to 1 teaspoon red chili powder (reduce for kids)</li>
+            <li>1 tablespoon lemon juice (optional)</li>
+            <li>2 cup basmati reciepes</li>
+        </ul>
+        <h3 style="margin-top: 25px; text-align: left;">Steps</h3>
+        <ol style="margin-top:10px ;">
+            <li>This recipe needs half kg chicken (1.1 lbs.). Make few slits on all the chicken pieces and add to a
+                large
+                bowl.Then add all the required spices.listed above in the ingredients</li>
+            <li>Mix everything well and marinate the chicken. Cover and set this aside for 1 hour. You can also rest it
+                overnight in the
+                fridge.</li>
+            <li>Meanwhile add 2 cups basmati rice to a large pot and rinse it at least thrice. Drain and soak in fresh
+                water
+                for 30
+                mins. Drain to a colander after 30 mins. Optional – Soak a pinch of saffron strands in 2 tablespoons hot
+                milk.</li>
+            <li>Heat ghee or oil in a heavy bottom pot or pressure cooker. Make sure you use a large one for this. Using
+                whole spices is
+                optional but recommended. Use whatever you have. I use
+                <ul>
+                    <li>1 bay leaf
+                    </li>
+                    <li>4 green cardamoms
+                    </li>
+                    <li>6 cloves
+                    </li>
+                    <li>1 inch cinnamon piece
+                    </li>
+                    <li>1 star anise
+                    </li>
+                    <li>¾ teaspoon shahi jeera (caraway seeds)
+                    </li>
+                    <li>1 strand mace (optional, omit if you don’t like)
+                    </li>
+                </ul>
 
 
-        </li>
-        <li>Add thinly sliced onions. On a medium heat, fry them stirring often until uniformly light brown.</li>
-        <li>Turn them into golden brown color. Do not burn them as they leave a bitter taste.</li>
-        <li>Add marinated chicken & saute until it becomes pale for 5 minutes.</li>
-        <li>Lower the flame completely. Cover and cook until the chicken is soft, tender and completely cooked.</li>
-        <li>Check if the chicken is cooked by pricking with a fork or knife. It has to be just cooked and not overdone.
-            Evaporate
-            any excess moisture left in the pot by cooking further without the lid.</li>
-        <li>Taste test and add more salt if needed. I added ¼ more salt here. Add
-            <ul>
-                <li>¼ cup plain yogurt (Indian curd)
-                </li>
-                <li>1 teaspoon garam masala (or biryani masala)
-                </li>
-                <li>¼ to ½ teaspoon red chili powder (optional)
-                </li>
-                <li>1 slit green chili pepper (optional)
-                </li>
-                <li>2 tablespoons chopped mint leaves (pudina)
-                </li>
+            </li>
+            <li>Add thinly sliced onions. On a medium heat, fry them stirring often until uniformly light brown.</li>
+            <li>Turn them into golden brown color. Do not burn them as they leave a bitter taste.</li>
+            <li>Add marinated chicken & saute until it becomes pale for 5 minutes.</li>
+            <li>Lower the flame completely. Cover and cook until the chicken is soft, tender and completely cooked.</li>
+            <li>Check if the chicken is cooked by pricking with a fork or knife. It has to be just cooked and not
+                overdone.
+                Evaporate
+                any excess moisture left in the pot by cooking further without the lid.</li>
+            <li>Taste test and add more salt if needed. I added ¼ more salt here. Add
+                <ul>
+                    <li>¼ cup plain yogurt (Indian curd)
+                    </li>
+                    <li>1 teaspoon garam masala (or biryani masala)
+                    </li>
+                    <li>¼ to ½ teaspoon red chili powder (optional)
+                    </li>
+                    <li>1 slit green chili pepper (optional)
+                    </li>
+                    <li>2 tablespoons chopped mint leaves (pudina)
+                    </li>
 
-            </ul>
+                </ul>
 
 
-        </li>
-        <li>Mix everything well. Spread it evenly in a single layer.
-        </li>
-        <li>
-            Layer drained rice all over the chicken. To a separate pot, pour 3 cups water and add ¼ to ½ teaspoon
-            salt. If cooking
-            in a pot (not cooker), start with 3 cups water at this stage.
+            </li>
+            <li>Mix everything well. Spread it evenly in a single layer.
+            </li>
+            <li>
+                Layer drained rice all over the chicken. To a separate pot, pour 3 cups water and add ¼ to ½ teaspoon
+                salt. If cooking
+                in a pot (not cooker), start with 3 cups water at this stage.
 
-            Stir and taste the water. It must be slightly salty. Bring the water to a rolling boil. Pour 2 cups of
-            this hot water
-            across the sides of the cooker or pot. Pour rest of the water over the rice gently
+                Stir and taste the water. It must be slightly salty. Bring the water to a rolling boil. Pour 2 cups of
+                this hot water
+                across the sides of the cooker or pot. Pour rest of the water over the rice gently
 
-        </li>
-        <li>Level the rice gently on top. Add 2 tablespoons more mint leaves.Do not mix up everything, the taste of the
-            biryani
-            cooked in the shown method is good. Optionally you can sprinkle 2 tablespoons fried onions & saffron soaked
-            milk.</li>
-        <li>Finally cover the pot or cooker.</li>
-        <li>When the pressure releases naturally, open the lid. Gently fluff up with a fork.</li>
-        <li>Serve chicken biryani in layers – top layer with rice and bottom layer with chicken. Enjoy with raita or
-            shorba.</li>
+            </li>
+            <li>Level the rice gently on top. Add 2 tablespoons more mint leaves.Do not mix up everything, the taste of
+                the
+                biryani
+                cooked in the shown method is good. Optionally you can sprinkle 2 tablespoons fried onions & saffron
+                soaked
+                milk.</li>
+            <li>Finally cover the pot or cooker.</li>
+            <li>When the pressure releases naturally, open the lid. Gently fluff up with a fork.</li>
+            <li>Serve chicken biryani in layers – top layer with rice and bottom layer with chicken. Enjoy with raita or
+                shorba.</li>
 
-    </ol>
+        </ol>
+    </div>
     <a href="/index.html"><Strong>Home</Strong></a>
 </body>
 
